objects/ASI_TnE_ClaimDetail__c.object
<CustomObject>
    <fields>
        <fullName>ASI_TnE_MFM_PO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MFM PO</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR (3 AND 4 AND 5) OR (6 AND 7) OR (1 AND 8)</booleanFilter>
            <filterItems>
                <field>ASI_MFM_PO__c.ASI_MFM_Status__c</field>
                <operation>equals</operation>
                <value>Final</value>
            </filterItems>
            <filterItems>
                <field>ASI_MFM_PO__c.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>TH PO, TH PO Read-Only</value>
            </filterItems>
            <filterItems>
                <field>ASI_MFM_PO__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>TH PO Read-Only</value>
            </filterItems>
            <filterItems>
                <field>ASI_MFM_PO__c.ASI_MFM_T_E__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>ASI_MFM_PO__c.ASI_MFM_Status__c</field>
                <operation>equals</operation>
                <value>Complete</value>
            </filterItems>
            <filterItems>
                <field>ASI_MFM_PO__c.ASI_MFM_Status__c</field>
                <operation>equals</operation>
                <value>Final, Complete, Partial Paid</value>
            </filterItems>
            <filterItems>
                <field>ASI_MFM_PO__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>HK PO, HK PO Read-Only, TR PO, TR PO Read-Only</value>
            </filterItems>
            <filterItems>
                <field>ASI_MFM_PO__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>SG PO, SG PO Read-Only</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_MFM_PO__c</referenceTo>
        <relationshipLabel>Travel &amp; Entertainment Claims Detail</relationshipLabel>
        <relationshipName>Travel_Entertainment_Claims_Detail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_MY_GST_Value__c</fullName>
        <label>GST Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Market_Charged_To__c</fullName>
        <label>Market Charged</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cambodia</fullName>
                </value>
                <value>
                    <fullName>Indonesia</fullName>
                </value>
                <value>
                    <fullName>Laos</fullName>
                </value>
                <value>
                    <fullName>Myanmar</fullName>
                </value>
                <value>
                    <fullName>Philippines</fullName>
                </value>
                <value>
                    <fullName>Singapore DP</fullName>
                </value>
                <value>
                    <fullName>Singapore DF</fullName>
                </value>
                <value>
                    <fullName>Thailand</fullName>
                </value>
                <value>
                    <fullName>Vietnam</fullName>
                </value>
                <value>
                    <fullName>East Malaysia</fullName>
                </value>
                <value>
                    <fullName>Malacca</fullName>
                </value>
                <value>
                    <fullName>Ipoh</fullName>
                </value>
                <value>
                    <fullName>Chivas Brother</fullName>
                </value>
                <value>
                    <fullName>Irish Distriller</fullName>
                </value>
                <value>
                    <fullName>Ricard SA.</fullName>
                </value>
                <value>
                    <fullName>Philippines DF</fullName>
                </value>
                <value>
                    <fullName>Kuala Lumpur</fullName>
                </value>
                <value>
                    <fullName>Langkawi</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_TnE_Meal__c</fullName>
        <formula>IF( ISPICKVAL( ASI_TnE_Expense_Type__c , &quot;Meal&quot;) , ASI_TnE_Amount__c*ASI_TnE_Exchange_Rate_to_VND__c, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Meals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Meeting__c</fullName>
        <formula>IF( ISPICKVAL( ASI_TnE_Expense_Type__c , &quot;Meeting&quot;) , ASI_TnE_Amount__c*ASI_TnE_Exchange_Rate_to_VND__c, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Meeting</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Name_Company__c</fullName>
        <label>Name &amp; Company</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Non_Taxable_Amount_Display__c</fullName>
        <formula>IF(
   ASI_TnE_Tax_Inclusive__c,
   IF(
      CONTAINS(ASI_TnE_Sys_Record_Type__c, &quot;ASI_TnE_MY&quot;),
      IF(
         ISPICKVAL(ASI_TnE_Billed_To__c, &quot;Cash&quot;),
         IF(
            OR(ISPICKVAL(ASI_TnE_Client_Type__c, &quot;&quot;), ISPICKVAL(ASI_TnE_Client_Type__c, &quot;Existing Client&quot;), ISPICKVAL(ASI_TnE_Client_Type__c, &quot;Staff&quot;)),
            IF(ASI_TnE_HK_Payment_Amount__c &lt;= 530, 0, ASI_TnE_HK_Payment_Amount__c - 530),
            ASI_TnE_HK_Payment_Amount__c
         ),
         IF(
            OR(ISPICKVAL(ASI_TnE_Client_Type__c, &quot;&quot;), ISPICKVAL(ASI_TnE_Client_Type__c, &quot;Existing Client&quot;), ISPICKVAL(ASI_TnE_Client_Type__c, &quot;Staff&quot;)),
            0,
            ASI_TnE_HK_Payment_Amount__c
         )
      ),
      0
   ),
   ASI_TnE_HK_Payment_Amount__c
)</formula>
        <label>Non-Taxable Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Non_Taxable_Amount__c</fullName>
        <label>Non-Taxable Amount</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Original_Amount__c</fullName>
        <label>Original Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Outlet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Outlet</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Travel &amp; Entertainment Claims Detail</relationshipLabel>
        <relationshipName>Travel_Entertainment_Claims_Detail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Owner__c</fullName>
        <formula>ASI_TnE_ClaimHeader__r.Owner:User.FirstName + &quot; &quot; +  ASI_TnE_ClaimHeader__r.Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_PO_No__c</fullName>
        <label>PO No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Payment_Amount__c</fullName>
        <formula>ROUND(ASI_TnE_Receipt_Amount__c * IF(ISNULL( ASI_TnE_FX_Rate__c) || ISBLANK(ASI_TnE_FX_Rate__c) || ASI_TnE_FX_Rate__c&lt;=0,1,ASI_TnE_FX_Rate__c),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Payment_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Request</label>
        <referenceTo>ASI_TH_CRM_PaymentRequest__c</referenceTo>
        <relationshipLabel>Travel &amp; Entertainment Claims Detail</relationshipLabel>
        <relationshipName>Travel_Entertainment_Claims_Detail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Phase__c</fullName>
        <label>Phase</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Pre_Trip_Approval_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pre-Approval Form</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ASI_eForm_Pre_Trip_Approval__c.ASI_eForm_Status__c</field>
                <operation>equals</operation>
                <value>Final</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_eForm_Pre_Trip_Approval__c</referenceTo>
        <relationshipLabel>Travel &amp; Entertainment Claims Detail</relationshipLabel>
        <relationshipName>Travel_Entertainment_Claims_Detail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Promotion_Code__c</fullName>
        <description>Promotion Code</description>
        <label>Promotion Code (Old)</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Receipt_Amount_Displaying__c</fullName>
        <formula>IF( 
  ASI_TnE_Receipt_Amount__c &gt;= 1000000, 
  TEXT(FLOOR(ASI_TnE_Receipt_Amount__c / 1000000)) &amp; &quot;,&quot;, 
  &quot;&quot;) &amp; 
IF( 
  ASI_TnE_Receipt_Amount__c &gt;= 1000, 
  RIGHT(TEXT(FLOOR(ASI_TnE_Receipt_Amount__c / 1000)), 3) &amp; &quot;,&quot;, 
  &quot;&quot;) &amp; 
RIGHT(TEXT(FLOOR(ASI_TnE_Receipt_Amount__c)), 3) &amp; &quot;.&quot; &amp; 
IF( 
  MOD(ASI_TnE_Receipt_Amount__c , 1) * 100 &lt; 10, 
  &quot;0&quot; &amp; TEXT(ROUND(MOD(ASI_TnE_Receipt_Amount__c , 1), 2) * 100), 
  TEXT(MIN(ROUND(MOD(ASI_TnE_Receipt_Amount__c , 1), 2) * 100, 99)) 
)
&amp; &quot; (&quot; &amp;  Text(ASI_TnE_Currency__c)  &amp; &quot;)&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Receipt Amount</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Receipt_Amount__c</fullName>
        <label>Receipt Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Receipt_Amt_PO_CCY__c</fullName>
        <formula>IF (TEXT(ASI_TnE_MFM_PO__r.ASI_MFM_Currency__c) == TEXT(ASI_TnE_Currency__c), TEXT(ASI_TnE_Receipt_Amount__c), TEXT(ROUND(ASI_TnE_Receipt_Amount__c / NULLVALUE(ASI_TnE_Exchange_Rate_to_VND__c, 1),2))) &amp; &quot; (&quot; &amp; Text( ASI_TnE_MFM_PO__r.ASI_MFM_Currency__c) &amp; &quot;)&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Receipt Amount in PO Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Receipt_Date__c</fullName>
        <label>Receipt Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Receipt_Number__c</fullName>
        <label>Rpt No.</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Recipient_Type__c</fullName>
        <label>Recipient Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Public Official</fullName>
                </value>
                <value>
                    <fullName>Non Public Official</fullName>
                </value>
                <value>
                    <fullName>Public Official &amp; Media</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_TnE_SG_Sub_Ledger__c</fullName>
        <label>Sub-Ledger</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Sales_Month__c</fullName>
        <label>Sales Month</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Sales_Year__c</fullName>
        <label>Sales Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Spend_Per_Head__c</fullName>
        <formula>IF((ASI_TnE_Total_Number_Pax__c &gt; 0) &amp;&amp; ( ASI_TnE_Receipt_Amount__c &gt; 0),  ASI_TnE_Payment_Amount__c / ASI_TnE_Total_Number_Pax__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Spend Per Head</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Status__c</fullName>
        <formula>TEXT(ASI_TnE_ClaimHeader__r.ASI_TnE_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_SubBrand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand Charge To</label>
        <referenceTo>ASI_MFM_Sub_brand__c</referenceTo>
        <relationshipLabel>Travel &amp; Entertainment Claims Detail</relationshipLabel>
        <relationshipName>Travel_Entertainment_Claims_Detail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Sub_Ledger__c</fullName>
        <formula>ASI_TnE_ClaimHeader__r.Owner:User.ASI_TnE_Sub_Ledger__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub-Ledger</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Submitted_Payment_Amount__c</fullName>
        <label>Submitted Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Travel &amp; Entertainment Claims Detail</relationshipLabel>
        <relationshipName>Travel_Entertainment_Claims_Detail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Supported_Item__c</fullName>
        <label>Supported Item</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>판촉물/POS 제작</fullName>
                </value>
                <value>
                    <fullName>야유회 지원</fullName>
                </value>
                <value>
                    <fullName>키맨/직원 선물</fullName>
                </value>
                <value>
                    <fullName>키맨/직원 접대</fullName>
                </value>
                <value>
                    <fullName>회식/간식 지원</fullName>
                </value>
                <value>
                    <fullName>브랜드마케팅 예산지원</fullName>
                </value>
                <value>
                    <fullName>기타</fullName>
                </value>
                <value>
                    <fullName>Internal Market Visit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_TnE_Sys_IsClone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sys Is Clone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Sys_Record_Type__c</fullName>
        <label>Sys Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_TW_Payment_Amount__c</fullName>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Tax_Amount__c</fullName>
        <label>Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Tax_Area__c</fullName>
        <label>Tax Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CP8</fullName>
                </value>
                <value>
                    <fullName>CP0</fullName>
                </value>
                <value>
                    <fullName>CP10</fullName>
                </value>
                <value>
                    <fullName>CP8R</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_TnE_Tax_Area_override__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tax Area Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Tax_Date__c</fullName>
        <label>Tax Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Tax_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax ID</label>
        <referenceTo>ASI_TnE_Address_Number_Mapping__c</referenceTo>
        <relationshipLabel>Travel &amp; Entertainment Claims Detail</relationshipLabel>
        <relationshipName>Travel_Entertainment_Claims_Detail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Tax_Inclusive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tax</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Tax_Rate__c</fullName>
        <label>Tax Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Taxable_Amount_Display__c</fullName>
        <formula>IF(
   ASI_TnE_Tax_Inclusive__c,
   IF(
      CONTAINS(ASI_TnE_Sys_Record_Type__c, &quot;ASI_TnE_MY&quot;),
      IF(
         ISPICKVAL(ASI_TnE_Billed_To__c, &quot;Cash&quot;),
         IF(
            OR(ISPICKVAL(ASI_TnE_Client_Type__c, &quot;&quot;), ISPICKVAL(ASI_TnE_Client_Type__c, &quot;Existing Client&quot;), ISPICKVAL(ASI_TnE_Client_Type__c, &quot;Staff&quot;)),
            IF(ASI_TnE_HK_Payment_Amount__c &lt;= 530, ROUND(ASI_TnE_HK_Payment_Amount__c / (1 + ASI_TnE_Tax_Rate__c), 2), 500),
            0
         ),
         IF(
            OR(ISPICKVAL(ASI_TnE_Client_Type__c, &quot;&quot;), ISPICKVAL(ASI_TnE_Client_Type__c, &quot;Existing Client&quot;), ISPICKVAL(ASI_TnE_Client_Type__c, &quot;Staff&quot;)),
            ROUND(ASI_TnE_HK_Payment_Amount__c / (1 + ASI_TnE_Tax_Rate__c), 2),
            0
         )
      ),
      IF(
         CONTAINS(ASI_TnE_Sys_Record_Type__c, &quot;ASI_TnE_TW&quot;),
         ROUND(ASI_TnE_HK_Payment_Amount__c / (1 + ASI_TnE_Tax_Rate__c), 0),
         ROUND(ASI_TnE_HK_Payment_Amount__c / (1 + ASI_TnE_Tax_Rate__c), 2)
      )
   ),
   0
)</formula>
        <label>Taxable Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Taxable_Amount__c</fullName>
        <label>Taxable Amount</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Total_Expense__c</fullName>
        <formula>ROUND(ASI_TnE_Amount__c*ASI_TnE_Exchange_Rate_to_VND__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Exp (VND)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Total_Number_Pax__c</fullName>
        <label>Pax</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Travel_Total__c</fullName>
        <formula>ASI_TnE_Hotel__c +  ASI_TnE_Airline__c +  ASI_TnE_Auto__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Travel Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_VAT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VAT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_WHT_Amount__c</fullName>
        <formula>ROUND((ASI_TnE_HK_Payment_Amount__c - ASI_TnE_Tax_Amount__c) * VALUE(LEFT(TEXT(ASI_TnE_WHT_Rate__c), FIND(&quot;%&quot;, TEXT(ASI_TnE_WHT_Rate__c)) - 1)) / 100, 2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WHT Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_WHT_Rate__c</fullName>
        <label>WHT Rate</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1%</fullName>
                </value>
                <value>
                    <fullName>2%</fullName>
                </value>
                <value>
                    <fullName>3%</fullName>
                </value>
                <value>
                    <fullName>4%</fullName>
                </value>
                <value>
                    <fullName>5%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_TnE_With_Receipt__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Receipt</label>
        <type>Checkbox</type>
    </fields>
    <label>Travel &amp; Entertainment Claim Detail</label>
    <nameField>
        <displayFormat>TED-{YY}-{00000}</displayFormat>
        <label>Claim Detail No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Travel &amp; Entertainment Claims Detail</pluralLabel>
    <recordTypes>
        <fullName>ASI_JP_TnE_Claim_Detail</fullName>
        <active>true</active>
        <label>TnE JP Claim Detail</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_TnE_HK_Claim_Detail</fullName>
        <active>true</active>
        <label>TnE HK Claim Detail</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_TnE_ID_Claim_Detail</fullName>
        <active>true</active>
        <label>ASI TnE ID Claim Detail</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_TnE_KH_Claim_Detail</fullName>
        <active>true</active>
        <label>ASI TnE KH Claim Detail</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_TnE_KR_Claim_Detail</fullName>
        <active>true</active>
        <label>TnE KR Claim Detail</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_TnE_MY_Claim_Detail</fullName>
        <active>true</active>
        <label>ASI TnE MY Claim Detail</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_TnE_PH_Claim_Detail</fullName>
        <active>true</active>
        <label>ASI TnE PH Claim Detail</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_TnE_SG_Claim_Detail</fullName>
        <active>true</active>
        <label>ASI TnE SG Claim Detail</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_TnE_TH_Claim_Detail</fullName>
        <active>true</active>
        <label>ASI TnE TH Claim Detail</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_TnE_TW_Claim_Detail</fullName>
        <active>true</active>
        <label>ASI TnE TW Claim Detail</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_TnE_VN_Claim_Detail</fullName>
        <active>true</active>
        <label>PR Vietnam TnE Claim Detail</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ASI_JP_TnE_Expense_Category_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ASI_TnE_Expense_Classification__r.ASI_JP_TnE_Expense_Category__r.Id !=  ASI_TnE_Expense_Category__r.Id,  RecordType.DeveloperName = &quot;ASI_JP_TnE_Claim_Detail&quot;)</errorConditionFormula>
        <errorMessage>The Expense Category does not include the Expense Classification selected. Please correct</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_JP_TnE_PAX_Amount_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>(RecordType.DeveloperName==&apos;ASI_JP_TnE_Claim_Detail&apos;) &amp;&amp;(ASI_TnE_Total_Number_Pax__c &gt; 0) &amp;&amp; ( ASI_TnE_Receipt_Amount__c &gt; 0) &amp;&amp; (( ASI_TnE_Spend_Per_Head__c )&gt; ASI_TnE_Expense_Classification__r.ASI_JP_TnE_Maximum_Amount__c)</errorConditionFormula>
        <errorMessage>The Spending Per Head must not be greater than Maximum Amount per head in current Expense Classification</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_JP_TnE_PAX_Amount_Validation_Minimum</fullName>
        <active>true</active>
        <errorConditionFormula>(RecordType.DeveloperName==&apos;ASI_JP_TnE_Claim_Detail&apos;) &amp;&amp;(ASI_TnE_Total_Number_Pax__c &gt; 0) &amp;&amp; ( ASI_TnE_Receipt_Amount__c &gt; 0) &amp;&amp; (( ASI_TnE_Spend_Per_Head__c )&lt; ASI_TnE_Expense_Classification__r.ASI_JP_TnE_Minimum_Amount__c)</errorConditionFormula>
        <errorMessage>The Spending Per Head must not be less than Minimum Amount per head in current Expense Classification</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_JP_TnE_PAX_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>(RecordType.DeveloperName==&apos;ASI_JP_TnE_Claim_Detail&apos;) &amp;&amp;(ASI_TnE_Total_Number_Pax__c &lt; 0)</errorConditionFormula>
        <errorDisplayField>ASI_TnE_Total_Number_Pax__c</errorDisplayField>
        <errorMessage>PAX must not be less than 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_JP_TnE_Receipt_Date_Validation</fullName>
        <active>true</active>
        <description>Receipt Date Validation</description>
        <errorConditionFormula>(RecordType.DeveloperName==&apos;ASI_JP_TnE_Claim_Detail&apos;) &amp;&amp; ((ASI_TnE_Receipt_Date__c &gt; ASI_TnE_ClaimHeader__r.ASI_TnE_Cover_Period_To__c) || (ASI_TnE_Receipt_Date__c &lt; ASI_TnE_ClaimHeader__r.ASI_TnE_Cover_Period_From__c) )</errorConditionFormula>
        <errorMessage>Receipt Date must be in between Claim Cover From and Cover To</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_TnE_Dispute_Required_Reason</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    OR(
       CONTAINS(RecordType.DeveloperName, &quot;ASI_TnE_HK&quot;),
       CONTAINS(RecordType.DeveloperName, &quot;ASI_TnE_SG&quot;),
       CONTAINS(RecordType.DeveloperName, &quot;ASI_TnE_MY&quot;)
    ),
    ASI_TnE_Dispute__c,
    ISBLANK(ASI_TnE_Details_of_Expense__c)
)</errorConditionFormula>
        <errorDisplayField>ASI_TnE_Details_of_Expense__c</errorDisplayField>
        <errorMessage>You must input reason when Dispute is checked</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_TnE_HK_Over_PO_Remaining_Balance</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    OR(
        CONTAINS(RecordType.DeveloperName, &quot;ASI_TnE_HK&quot;),
        CONTAINS(RecordType.DeveloperName, &quot;ASI_TnE_SG&quot;),
        CONTAINS(RecordType.DeveloperName, &quot;ASI_TnE_TH&quot;),
        CONTAINS(RecordType.DeveloperName, &quot;ASI_TnE_MY&quot;)
    ),
    NOT(ISBLANK(ASI_TnE_MFM_PO__c)),
    OR(
    ISNEW()&amp;&amp; ASI_TnE_HK_Payment_Amount__c &gt; ASI_TnE_MFM_PO__r.ASI_MFM_PO_Balance__c ,
    ISCHANGED( ASI_TnE_Receipt_Amount__c ) &amp;&amp;  PRIORVALUE(ASI_TnE_Receipt_Amount__c) &lt; ASI_TnE_Receipt_Amount__c &amp;&amp;
    ASI_TnE_HK_Payment_Amount__c - PRIORVALUE(ASI_TnE_HK_Payment_Amount__c) &gt; ASI_TnE_MFM_PO__r.ASI_MFM_PO_Balance__c
    )
)</errorConditionFormula>
        <errorDisplayField>ASI_TnE_A_C_Code__c</errorDisplayField>
        <errorMessage>The expense is exceeding the PO Remaining balance</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_TnE_HK_Receipt_Date_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    CONTAINS(RecordType.DeveloperName, &quot;ASI_TnE_HK&quot;),
    ASI_TnE_Receipt_Date__c &gt;  TODAY()
)</errorConditionFormula>
        <errorDisplayField>ASI_TnE_Receipt_Date__c</errorDisplayField>
        <errorMessage>Receipt Date cannot be a future date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_TnE_KR_Customer_Validation</fullName>
        <active>false</active>
        <description>CHG0030009: deactivated for quick save</description>
        <errorConditionFormula>if( RecordType.DeveloperName == &apos;ASI_TnE_KR_Claim_Detail&apos; &amp;&amp;    (ASI_TnE_Expense_Classification__r.Name_en_US__c  ==&apos;Entertainment for WS &amp; Venue&apos; || ASI_TnE_Expense_Classification__r.Name_en_US__c ==&apos;External C&amp;C&apos;)&amp;&amp; ASI_TnE_KR_Customer__c == null, true, false)</errorConditionFormula>
        <errorDisplayField>ASI_TnE_KR_Customer__c</errorDisplayField>
        <errorMessage>Customer is mandatory.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_TnE_KR_checkDetailsOfExpense</fullName>
        <active>false</active>
        <description>CHG0030009: deactivated for quick save
Details of Expense should be mandatory field if Pax is more than 2.
For &quot;External Entertainment – others&quot;, details of expense must be the mandatory field.</description>
        <errorConditionFormula>if(RecordType.DeveloperName==&apos;ASI_TnE_KR_Claim_Detail&apos; &amp;&amp; (ASI_TnE_Total_Number_Pax__c&gt;1 || ASI_TnE_Expense_Classification__r.Name_en_US__c == &apos;Entertainment for other business partner&apos;) &amp;&amp; (ASI_TnE_Details_of_Expense__c==&apos;&apos; || ASI_TnE_Details_of_Expense__c==null),True,False)</errorConditionFormula>
        <errorDisplayField>ASI_TnE_Details_of_Expense__c</errorDisplayField>
        <errorMessage>Pelase enter Details of Expense</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_TnE_KR_check_BudgetOwner</fullName>
        <active>true</active>
        <description>For KR - 
Check if Budget Owner is equals to Owner / Payee</description>
        <errorConditionFormula>if(RecordType.DeveloperName==&apos;ASI_TnE_KR_Claim_Detail&apos;&amp;&amp; ASI_TnE_KR_Owner__c!=null&amp;&amp;(ASI_TnE_KR_Owner__c== ASI_TnE_ClaimHeader__r.OwnerId||ASI_TnE_KR_Owner__c==ASI_TnE_ClaimHeader__r.ASI_TnE_KR_Payee__c), true, false)</errorConditionFormula>
        <errorDisplayField>ASI_TnE_KR_Owner__c</errorDisplayField>
        <errorMessage>Owner / Payee cannot be Budget Owner</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_TnE_KR_check_Where</fullName>
        <active>false</active>
        <description>CHG0030009: deactivated for quick save
Check Field:Where as mandatory when  &quot;Entertainment for WS&amp;Venue&quot; is selected.</description>
        <errorConditionFormula>if( RecordType.DeveloperName == &apos;ASI_TnE_KR_Claim_Detail&apos; &amp;&amp; (ASI_TnE_Expense_Classification__r.Name_en_US__c ==&apos;Entertainment for WS &amp; Venue&apos; || ASI_TnE_Expense_Classification__r.Name_en_US__c ==&apos;External C&amp;C&apos;)&amp;&amp; ASI_TnE_KR_Where__c == null, true, false)</errorConditionFormula>
        <errorDisplayField>ASI_TnE_KR_Where__c</errorDisplayField>
        <errorMessage>Where is mandatory.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_TnE_Required_Fields_Billed_To</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    OR(
       CONTAINS(RecordType.DeveloperName, &quot;ASI_TnE_MY&quot;)
    ),
    INCLUDES(ASI_TnE_Expense_Classification__r.ASI_TnE_Required_Fields__c, &quot;ASI_TnE_Billed_To&quot;),
    ISPICKVAL(ASI_TnE_Billed_To__c, &quot;&quot;)
)</errorConditionFormula>
        <errorDisplayField>ASI_TnE_Billed_To__c</errorDisplayField>
        <errorMessage>This field Billed To is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_TnE_Required_Fields_CAP_Plan</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    OR(
       CONTAINS(RecordType.DeveloperName, &quot;ASI_TnE_HK&quot;),
       CONTAINS(RecordType.DeveloperName, &quot;ASI_TnE_TW&quot;)
    ),
    INCLUDES(ASI_TnE_Expense_Classification__r.ASI_TnE_Required_Fields__c, &quot;ASI_TnE_CAP_Plan&quot;),
    ISBLANK(ASI_TnE_CAP_Plan__c)
)</errorConditionFormula>
        <errorDisplayField>ASI_TnE_CAP_Plan__c</errorDisplayField>
        <errorMessage>This field MFM Plan is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_TnE_Required_Fields_Charge_To_Acc</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    OR(
       CONTAINS(RecordType.DeveloperName, &quot;ASI_TnE_HK&quot;),
       CONTAINS(RecordType.DeveloperName, &quot;ASI_TnE_SG&quot;),
       CONTAINS(RecordType.DeveloperName, &quot;ASI_TnE_PH&quot;),
       CONTAINS(RecordType.DeveloperName, &quot;ASI_TnE_ID&quot;),
       CONTAINS(RecordType.DeveloperName, &quot;ASI_TnE_TH&quot;),
       CONTAINS(RecordType.DeveloperName, &quot;ASI_TnE_MY&quot;),
       CONTAINS(RecordType.DeveloperName, &quot;ASI_TnE_TW&quot;)
    ),
    INCLUDES(ASI_TnE_Expense_Classification__r.ASI_TnE_Required_Fields__c, &quot;ASI_TnE_Charge_To_Acc&quot;),
    ISBLANK(ASI_TnE_Charge_To_Acc__c)
)</errorConditionFormula>
        <errorDisplayField>ASI_TnE_Charge_To_Acc__c</errorDisplayField>
        <errorMessage>This field Charge To (Acc) is required.</errorMessage>
    </validationRules>
</CustomObject>